manifests/frontend/webapp/deployment.yaml
# Deployment named "webapp"
# Listens on :8080
# Has SSH keys mounted
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
  namespace: frontend
  labels:
    app: webapp
    app.kubernetes.io/part-of: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
        - image: quay.io/vuln/webapp:latest
          command: ["/bin/entrypoint"]
          args:
            [
              "-listen",
              "8080",
              "-connect",
              "$(GATEWAY_SERVICE_ADDR):$(GATEWAY_SERVICE_PORT),$(REPORT_GENERATOR_SERVICE_ADDR):$(REPORT_GENERATOR_SERVICE_PORT)",
            ]
          imagePullPolicy: Always
          name: webapp
          ports:
            - containerPort: 8080
              protocol: TCP
---
# Service named "webapp-service"
# Listens on :8080
apiVersion: v1
kind: Service
metadata:
  labels:
    app: webapp
  name: webapp-service
  namespace: frontend
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
      name: http
  selector:
    app: webapp
  type: ClusterIP
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: webapp 
  namespace: frontend 
  labels:
    app: webapp
spec:
  to:
    kind: Service
    name: webapp-service
    weight: 100
  port:
    targetPort: http
  wildcardPolicy: None
